--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./style/swiper-4.3.5.min.css">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
     <div class="wrap">
         <header>头部</header>
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" style="background: mediumaquamarine">111</div>
+                <div class="swiper-slide" style="background: mediumpurple">222</div>
+            </div>
+        </div>
     </div>
+    <script src="js/libs/swiper-4.3.5.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
